roll a fresh app tomorrow and see if this is an issue

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
         <h3>You are <span id="online">online</span>.</h3>
     </body>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/index.js"></script>
 </html>
